<resources>
    <string name="app_name">395-Team-Ritchie</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">View Students</string>
    <string name="add_student">Add Student</string>
    <string name="welcome">Welcome</string>
    <string name="view_day">View Day</string>
    <string name="date">Date</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="enter_student_email">Enter Student Email</string>
    <string name="opening_capable">Opening Capable?</string>
    <string name="closing_capable">Closing Capable?</string>
    <string name="monday">Monday</string>
    <string name="title_activity_schedule_student">ScheduleStudentActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>