<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">

    <Switch
        android:id="@+id/mondayPMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="PM"
        app:layout_constraintStart_toEndOf="@+id/mondayAMSwitch"
        app:layout_constraintTop_toBottomOf="@+id/closeSwitch" />

    <Switch
        android:id="@+id/thursdayPMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="9dp"
        android:text="PM"
        app:layout_constraintStart_toEndOf="@+id/thursdayAMSwitch"
        app:layout_constraintTop_toBottomOf="@+id/wednesdayPMSwitch" />

    <Switch
        android:id="@+id/tudesdayPMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="PM"
        app:layout_constraintStart_toEndOf="@+id/tuesdayAMSwitch"
        app:layout_constraintTop_toBottomOf="@+id/mondayPMSwitch" />

    <Switch
        android:id="@+id/fridayPMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="9dp"
        android:text="PM"
        app:layout_constraintStart_toEndOf="@+id/fridayAMSwitch"
        app:layout_constraintTop_toBottomOf="@+id/thursdayPMSwitch" />

    <Switch
        android:id="@+id/wednesdayPMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="PM"
        app:layout_constraintStart_toEndOf="@+id/wednesdayAMSwitch"
        app:layout_constraintTop_toBottomOf="@+id/tudesdayPMSwitch" />

    <Switch
        android:id="@+id/wednesdayAMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:text="AM"
        app:layout_constraintStart_toEndOf="@+id/wednesdaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/tuesdayAMSwitch" />

    <Switch
        android:id="@+id/mondayAMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:text="AM"
        app:layout_constraintStart_toEndOf="@+id/mondaySwitch2"
        app:layout_constraintTop_toBottomOf="@+id/closeSwitch" />

    <Switch
        android:id="@+id/tuesdayAMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:text="AM"
        app:layout_constraintStart_toEndOf="@+id/tuesdaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/mondayAMSwitch" />

    <Switch
        android:id="@+id/thursdayAMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="9dp"
        android:text="AM"
        app:layout_constraintStart_toEndOf="@+id/thursdaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/wednesdayAMSwitch" />

    <Switch
        android:id="@+id/fridayAMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="9dp"
        android:text="AM"
        app:layout_constraintStart_toEndOf="@+id/fridaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/thursdayAMSwitch" />

    <Switch
        android:id="@+id/mondaySwitch2"
        android:layout_width="124dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/monday"
        app:layout_constraintStart_toStartOf="@+id/studentEmailField"
        app:layout_constraintTop_toBottomOf="@+id/closeSwitch" />

    <Switch
        android:id="@+id/sundaySwitch"
        android:layout_width="206dp"
        android:layout_height="25dp"
        android:layout_marginTop="9dp"
        android:text="Sunday (Full Day)"
        app:layout_constraintStart_toStartOf="@+id/saturdaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/saturdaySwitch" />

    <Button
        android:id="@+id/addStudentButtonFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sundaySwitch" />

    <Switch
        android:id="@+id/wednesdaySwitch"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:text="Wednesday"
        app:layout_constraintStart_toStartOf="@+id/tuesdaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/tuesdaySwitch" />

    <Switch
        android:id="@+id/tuesdaySwitch"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:text="Tuesday"
        app:layout_constraintStart_toStartOf="@+id/mondaySwitch2"
        app:layout_constraintTop_toBottomOf="@+id/mondaySwitch2" />

    <Switch
        android:id="@+id/fridaySwitch"
        android:layout_width="125dp"
        android:layout_height="24dp"
        android:layout_marginTop="9dp"
        android:text="Friday"
        app:layout_constraintStart_toStartOf="@+id/thursdaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/thursdaySwitch" />

    <Switch
        android:id="@+id/saturdaySwitch"
        android:layout_width="206dp"
        android:layout_height="27dp"
        android:layout_marginTop="9dp"
        android:text="Saturday (Full day)"
        app:layout_constraintStart_toStartOf="@+id/fridaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/fridaySwitch" />

    <Switch
        android:id="@+id/thursdaySwitch"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginTop="9dp"
        android:text="Thursday"
        app:layout_constraintStart_toStartOf="@+id/wednesdaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/wednesdaySwitch" />

    <EditText
        android:id="@+id/studentEmailField"
        android:layout_width="283dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/enter_student_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentNameField" />

    <EditText
        android:id="@+id/studentIDField"
        android:layout_width="285dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/enter_student_id"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/studentNameField"
        android:layout_width="283dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/enter_student_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentIDField" />

    <Switch
        android:id="@+id/openSwitch"
        android:layout_width="251dp"
        android:layout_height="31dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/opening_capable"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentEmailField" />

    <Switch
        android:id="@+id/closeSwitch"
        android:layout_width="251dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/closing_capable"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>